<?xml version='1.0'?> 
 <package format='2'> 
 <name>hpp-wholebody-step</name> 
 <version>4.10.0</version>
 <description>Path planning for humanoid robot by sliding on the groud. </description> 
 
 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer> 
 <license>LGPL</license> 
 
 <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-wholebody-step </url> --> 
 
 <author>Joseph Mirabel</author> 
 <author>Florent Lamiraux et al.</author> 
 
 <buildtool_depend>catkin</buildtool_depend> 
 <build_depend>hpp-walkgen</build_depend> 
 <exec_depend>hpp-walkgen</exec_depend> 
 <build_export_depend>hpp-walkgen</build_export_depend>
 <build_depend>eigen3</build_depend> 
 <exec_depend>eigen3</exec_depend> 
 <build_export_depend>eigen3</build_export_depend>
 <build_depend>urdfdom</build_depend> 
 <exec_depend>urdfdom</exec_depend> 
 <build_export_depend>urdfdom</build_export_depend>
 <build_depend>hpp-fcl</build_depend> 
 <exec_depend>hpp-fcl</exec_depend> 
 <build_export_depend>hpp-fcl</build_export_depend>
 <test_depend>romeo_description</test_depend> 
 <depend>roboptim-trajectory</depend> 
 </package>
